force-app/main/default/objects/Authorised_Deployment_User__c/Authorised_Deployment_User__c.object-meta.xml
<CustomObject>
    <description>Associates an active Salesforce user and deployment role with an Org Monitor Deployment Window.</description>
    <label>Authorised Deployment User</label>
    <nameField>
        <displayFormat>ADU-{00000}</displayFormat>
        <label>Authorised Deployment User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorised Deployment Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>