force-app/main/default/objects/Authorised_Deployment_User__c/fields/Deployment_Role__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Role__c</fullName>
    <description>The responsibility this user performs during the deployment window.</description>
    <label>Deployment Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI/CD User</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>