force-app/main/default/objects/Authorised_Deployment_User__c/fields/Deployment_Window__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Window__c</fullName>
    <description>The Deployment Window for which this user is authorised.</description>
    <label>Deployment Window</label>
    <referenceTo>Deployment_Window__c</referenceTo>
    <relationshipLabel>Authorised Deployment Users</relationshipLabel>
    <relationshipName>Authorised_Deployment_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>