force-app/main/default/objects/Authorised_Deployment_User__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional notes about this user&apos;s authorised deployment responsibilities.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>