force-app/main/default/objects/Authorised_Deployment_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active Salesforce user authorised to perform deployment work during the window.</description>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorised_Deployment_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>